--- a/src/marketplace.html
+++ b/src/marketplace.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- marketplace css file -->
     <link rel="stylesheet" href="../assets/css/marketplace.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container-fluid">
@@ -122,26 +123,203 @@
     </div>
 </section>
 
-<div class="title-collection ">
-    <h4>Special Offer</h4>
-    <h2>Top Collection</h2>
-    <hr>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="product-para">
-                <P class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, ut?
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ipsum.
-                </P>
+<!-- Top collection section starts here -->
 
-            </div>
-        </div>
+ <section id="featured">
+    <div class="container text-center mt-5 py-5">
+        <h4>Special offer</h4>
+        <h2>Top Collection</h2>
+        <hr>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, sapiente laborum 
+            neque enim molestias architecto velit obcaecati animi!</p>
     </div>
-</div>
+   <div class="row mx-auto container-fluid products-row">
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img1.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Hand bag</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img2.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Toy</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img3.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">white t-shirt</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img4.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Toy</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img5.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Vegetables</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img6.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Dress</h5>
+        <h4 class="p-price"> $200.00  <span><del >$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+     
+   </div>
+   <!-- second row starts here -->
+
+   <div class="row mt-5 mb-5 mx-auto container-fluid products-row">
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img10.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Hand bag</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img8.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Toy</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img9.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">white t-shirt</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img10.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Toy</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img11.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Vegetables</h5>
+        <h4 class="p-price"> $200.00  <span><del>$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product text-center col-lg-2 col-md-3 col-12">
+        <img class="img-fluid mb-3" src="../assets/images/marketplace/img12.jpg" alt="">
+        <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+        </div>
+        <h5 class="p-name">Dress</h5>
+        <h4 class="p-price"> $200.00  <span><del >$400.00</del></span></h4>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+     
+   </div>
 
  </section>
+ <!-- parallax part starts here background image fixed -->
+ <div class="parallax-container">
+    <div class="parallax">
+    <div class="content">
+        <div class="banner-contain">
+            <h2>sale</h2>
+            <h3>fashion trends</h3>
+            <h4>special offer</h4></div>
+    </div>
+</div>
+  </div>
 
+  <section class="tools-product">
+<div>
+
+</div>
+  </section>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
